Second Commit - Articles and Projects

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 # Uncomment and set the URL of your site (with protocol, e.g. `https://`)
 # NOTE: You don't need to provide this property when hosting on GitHub Pages or Netlify.
-# url:                   https://username.github.io
+url:                   https://mohammadamer.github.io
 
 # Uncomment and set the "base URL" of your site.
 # When your site is in a subdirectory, set to `/<name of directory>`,
@@ -20,19 +20,18 @@
 lang:                  en
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title:                 Hydejack
+title:                 Mohammad Amer # the main title
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  Hydejack is a boutique Jekyll theme for hackers, nerds, and academics,
-  with a focus on personal sites that are meant to impress.
+  Mohammad Amer, Mohammad Amer's Blog, Microsoft 365 development, SharePoint Development.
 
 # A shorter description for the sidebar.
-tagline:               Change `tagline` in `_config.yml`
+tagline:               Microsoft 365 developer
 
 # A list of keywords for your blog
-keywords:              []
+keywords:              [Mohammad Amer, Mohammad Amer's Blog, Microsoft 365 development, SharePoint Development, Microsoft Graph, Microosft Copilot]
 
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
@@ -42,8 +41,8 @@ logo:                  /assets/img/logo.png
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
-  name:                <firstname> <lastname>
-  email:               <mail@domain.tld>
+  name:                Mohammad Amer
+  email:               m.amer@live.com
   # # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
@@ -53,10 +52,10 @@ menu:
     url:               /blog/
   - title:             Projects
     url:               /projects/
-  - title:             Résumé*
+  - title:             Resume
     url:               /resume/
-  - title:             Documentation
-    url:               /docs/
+  #- title:             Documentation
+  #  url:               /docs/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
@@ -178,6 +177,9 @@ kramdown:
   math_engine_opts:    {}
   footnote_backlink:   '&#x21a9;&#xfe0e;'
 
+# 3rd Party Integrations
+# ----------------------------------------------------------------------------------------
+google_analytics: G-P6H3W10SD5
 
 # Hydejack Settings
 # ----------------------------------------------------------------------------------------
@@ -356,7 +358,7 @@ plugins:
 
 # Used for twitter cards
 # twitter:
-#   username:            <username>
+#   username:            mohammad3mer
 
 # Used for facebook open graph
 # facebook:
@@ -366,10 +368,10 @@ plugins:
 
 # Used on index and about sites
 # social:
-#   name:                <firstname> <lastname>
+#   name:                mohammad Amer
 #   links:
-#     - https://twitter.com/<username>
-#     - https://github.com/<username>
+#     - https://twitter.com/mohammad3mer
+#     - https://github.com/mohammadamer
 
 
 # Plugin Configs
