Update google tag

--- a/_config.yml
+++ b/_config.yml
@@ -179,7 +179,7 @@ kramdown:
 
 # 3rd Party Integrations
 # ----------------------------------------------------------------------------------------
-google_analytics: G-P6H3W10SD5
+google_analytics: G-7H0PVL324K
 
 # Hydejack Settings
 # ----------------------------------------------------------------------------------------
