Added Google Analytics GTM

--- a/_config.yml
+++ b/_config.yml
@@ -179,7 +179,7 @@ kramdown:
 
 # 3rd Party Integrations
 # ----------------------------------------------------------------------------------------
-google_analytics: G-7H0PVL324K
+google_analytics: GTM-5SLJ552B
 
 # Hydejack Settings
 # ----------------------------------------------------------------------------------------
