Added different way of google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -179,7 +179,8 @@ kramdown:
 
 # 3rd Party Integrations
 # ----------------------------------------------------------------------------------------
-google_analytics: GTM-5SLJ552B
+google_analytics_tag_manager: GTM-5SLJ552B
+google_analytics: G-XTXPZ118X6
 
 # Hydejack Settings
 # ----------------------------------------------------------------------------------------
