--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -14,7 +14,7 @@ author1:
 
   # This photo will be used in the about section
   picture:
-    path:            /assets/img/me.png
+    path:            https://mohammadamer.github.io/assets/img/me.png
     # srcset is optional, but can be used to provide higher res versions for retina displays
     srcset:
       1x:            https://via.placeholder.com/128x128
