Updated google analytics key

--- a/_config.yml
+++ b/_config.yml
@@ -180,7 +180,7 @@ kramdown:
 # 3rd Party Integrations
 # ----------------------------------------------------------------------------------------
 #google_analytics_tag_manager: GTM-5SLJ552B
-google_analytics: G-XTXPZ118X6
+google_analytics: G-P6H3W10SD5
 
 # Hydejack Settings
 # ----------------------------------------------------------------------------------------
