Updated resume and author social links

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -27,7 +27,8 @@ author1:
     twitter:         mohammad3mer
     github:          mohammadamer
     email:           m.amer@live.com
-    # rss:             https://<url>/feed.xml
+    rss:             https://mohamadamer.com/feed.xml
+    youtube:         Mohammad3mer
     # facebook:        <username>
     # google:          <number>
     # vk:              <username>
