--- a/_data/social.yml
+++ b/_data/social.yml
@@ -66,7 +66,7 @@ rss:
 youtube:
   name: YouTube
   icon: icon-youtube
-  prepend: "https://www.youtube.com/channel/"
+  prepend: "https://www.youtube.com/@"
 twitch:
   name: Twitch
   icon: icon-twitch
