Add conferences collection to site configuration with permalink and output settings

--- a/_config.yml
+++ b/_config.yml
@@ -312,6 +312,10 @@ collections:
     permalink:         /demos/:path/
     output:            true
 
+  conferences:
+    permalink:         /conferences/:path/
+    output:            true
+
 # File inclusion/exclusion
 # ----------------------------------------------------------------------------------------
 
